; ModuleID = '/home/carl/AnghaBench/openssl/providers/implementations/macs/extr_gmac_prov.c_gmac_get_params.c'
source_filename = "/home/carl/AnghaBench/openssl/providers/implementations/macs/extr_gmac_prov.c_gmac_get_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OSSL_MAC_PARAM_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @gmac_get_params to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gmac_get_params(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* @OSSL_MAC_PARAM_SIZE, align 4
  %7 = call i32* @OSSL_PARAM_locate(i32* %5, i32 %6)
  store i32* %7, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 (...) @gmac_size()
  %12 = call i32 @OSSL_PARAM_set_size_t(i32* %10, i32 %11)
  store i32 %12, i32* %2, align 4
  br label %14

13:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %14

14:                                               ; preds = %13, %9
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32* @OSSL_PARAM_locate(i32*, i32) #1

declare dso_local i32 @OSSL_PARAM_set_size_t(i32*, i32) #1

declare dso_local i32 @gmac_size(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
